tests/errors/nested-test/E4005_dir_member_not_found.ez
/*
 * Error Test: E4005 - undefined-module-member (from directory module)
 * Expected: "not found in module"
 *
 * This test requires a valid directory module to exist.
 * It imports the server module from the passing tests and tries to access
 * a non-existent function.
 */

import "../../nested-test/src/server"

do main() {
    server.nonexistent_function()  // This function doesn't exist in server module
}
